-- =============================
-- Revisión 593 - Fecha 20101203
-- -----------------------------
ALTER TABLE  `import_shipment` DROP  `arrivalPortName`;
ALTER TABLE `import_shipment` ADD `arrivalPortId` INTEGER   COMMENT 'Puerto de llegada';
ALTER TABLE `import_shipment` ADD INDEX `import_shipment_FI_2` (`arrivalPortId`);
ALTER TABLE `import_shipment` ADD CONSTRAINT `import_shipment_FK_2` FOREIGN KEY (`arrivalPortId`) REFERENCES `import_port` (`id`);

-- =============================
-- Revisión 590 - Fecha 20101203
-- -----------------------------
ALTER TABLE `import_supplierPurchaseOrder` ADD	`estimatedDeliveryDate` DATE   COMMENT 'Fecha estimada de entrega';

-- =============================
-- Revisión 587 - Fecha 20101202
-- -----------------------------
#-----------------------------------------------------------------------------
#-- import_shipment
#-----------------------------------------------------------------------------

DROP TABLE IF EXISTS `import_shipment`;


CREATE TABLE `import_shipment`
(
	`id` INTEGER  NOT NULL AUTO_INCREMENT COMMENT 'Id del envio',
	`createdAt` DATETIME  NOT NULL COMMENT 'Creation date for',
	`supplierPurchaseOrderId` INTEGER  NOT NULL COMMENT 'Supplier Purchase Order',
	`containersRealCount` INTEGER   COMMENT 'Cantidad real de containers',
	`containersNumbers` TEXT   COMMENT 'Numeros de los contenedores',
	`pickupDate` DATE   COMMENT 'Fecha de retiro de la mercancia',
	`shipmentDate` DATE   COMMENT 'Fecha de embarque',
	`blNumber` INTEGER   COMMENT 'BL Hawb',
	`vesselName` VARCHAR(255)   COMMENT 'Nombre del buque',
	`estimatedDepartureDate` DATE   COMMENT 'Fecha estimada de partida del buque',
	`departureDate` DATE   COMMENT 'Fecha de partida del buque',
	`arrivalPortName` VARCHAR(255)   COMMENT 'Nombre del puerto de llegada',
	`arrivalToPanamaDate` DATE   COMMENT 'Fecha de llegada a Panama',
	`transshipmentDate` DATE   COMMENT 'Fecha de transbordo',
	`telexRelease` TINYINT   COMMENT 'Telex release',